# qute-1pass-sidecar

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: native_protocol_notes.md
launcher/: .gitignore  Makefile  qute-1pass-sidecar.c
shim/: Makefile  qute_browser_spoof.c
sidecar/: __init__.py  server.py
sidecar/backends/: __init__.py  base.py  native_protocol.py  op_cli.py
tests/: test_native_protocol_backend.py  test_op_cli_backend.py  test_server.py
tests/captures/: fake_bs.py
