[project]
name = "qute-1pass-sidecar"
version = "0.1.0"
description = "1Password sidecar daemon for qutebrowser"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
qute-1pass-sidecar = "sidecar.server:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["sidecar*"]
