[project]
name = "qute-1pass-sidecar"
version = "0.1.0"
description = "1Password sidecar daemon for qutebrowser"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
authors = [{ name = "Gianluca Mazza", email = "info@gianlucamazza.it" }]
keywords = [
  "qutebrowser",
  "1password",
  "password-manager",
  "passkey",
  "webauthn",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP :: Browsers",
  "Topic :: Security",
]
dependencies = ["publicsuffixlist>=0.10.0"]

[project.urls]
Homepage = "https://github.com/gianlucamazza/qute-1pass-sidecar"
Repository = "https://github.com/gianlucamazza/qute-1pass-sidecar"
Issues = "https://github.com/gianlucamazza/qute-1pass-sidecar/issues"
"Browser integration" = "https://github.com/gianlucamazza/qutebrowser/tree/validate-8642-webauthn"

[project.scripts]
qute-1pass-sidecar = "sidecar.server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["sidecar*"]
